# loaded

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: pr.yml  release.yml
docs/: design.md  loaded-arch.excalidraw
scripts/: version_bump.sh
src/: cli.rs  cmd.rs  connection.rs  engine.rs  main.rs  stats.rs  stream.rs  util.rs  worker.rs
src/cmd/: gen_completions.rs  run.rs
src/connection/: completion.rs  lifecycle.rs  rate_limit.rs  stats.rs
src/engine/: s3.rs  s3_engine.rs  simple.rs
src/engine/s3/: traffic.rs  uri.rs
src/stream/: checksum.rs  perpetual_stream.rs
