[package]
name = "loaded"
version = "0.2.0"
edition = "2021"
repository = "https://github.hpe.com/hpe/loaded"
description = """
A tool to generate http/s traffic to a server 'til it's absolutely loaded
"""
authors = [
    "Mike Carlin",
    "Steve Lahr",
    "Nick Phillips",
    "Chuck Tuffli",
]

[dependencies]
hyper = { version = "=1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
http-body-util = "=0.1.0-rc.3"
num_cpus = "1.15.0"
clap = {version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"
bytes = "1"
futures = "0.3"
futures-util = "0.3.28"
hdrhistogram = "7.5.2"
num-bigint = { version = "0.4.3", features = ["serde"] }
ctrlc = "3.3.0"
async-trait = "0.1.68"
enum_dispatch = "0.3.11"
bigdecimal = { version = "0.4.0", features = ["serde"] }
bytesize = "1.2.0"
tokio-util = "0.7.8"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.11.0"

md-5 = "0.10.5"
sha2 = "0.10.5"
sha1 = "0.10.5"
crc = "3.0"
crc32c-hw = "0.1.2"

governor = "0.6.0"
nonzero_ext = "0.3.0"

uuid = { version = "1.3.3", features =  ["v4", "fast-rng", "macro-diagnostics",] }
